# baton

./: Cargo.toml  README.md
agent/: AUTOBUILDER_PROGRAM.md  intent-card.json
src/: lib.rs  main.rs
tests/: acceptance_ac1.rs  acceptance_ac10.rs  acceptance_ac11.rs  acceptance_ac12.rs  acceptance_ac2.rs  acceptance_ac3.rs  acceptance_ac4.rs  acceptance_ac5.rs  acceptance_ac6.rs  acceptance_ac7.rs  acceptance_ac8.rs  acceptance_ac9.rs
